--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Black Code Formatter
         uses: lgeiger/black-action@v1.0.1
         with:
-          args: "pycargo --check"
+          args: "pycargo --check --line-length 799"
